[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/weapons/2.png" type="Texture" id=1]
[ext_resource path="res://assets/weapons/3.png" type="Texture" id=2]
[ext_resource path="res://assets/weapons/4.png" type="Texture" id=3]
[ext_resource path="res://Fonts/Arial 32.tres" type="DynamicFont" id=4]
[ext_resource path="res://src/Scripts/Shop.gd" type="Script" id=5]
[ext_resource path="res://Fonts/Arial 25.tres" type="DynamicFont" id=6]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_right = 1010.0
margin_bottom = 586.0

[node name="2" type="Sprite" parent="PanelContainer/MarginContainer/VBoxContainer"]
position = Vector2( 150, 206 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="3" type="Sprite" parent="PanelContainer/MarginContainer/VBoxContainer"]
position = Vector2( 482, 199 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="4" type="Sprite" parent="PanelContainer/MarginContainer/VBoxContainer"]
position = Vector2( 852, 201 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="Buy" type="Button" parent="."]
margin_left = 82.0
margin_top = 424.0
margin_right = 231.0
margin_bottom = 482.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
text = "BUY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buy2" type="Button" parent="."]
margin_left = 409.0
margin_top = 433.0
margin_right = 558.0
margin_bottom = 491.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
text = "BUY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buy3" type="Button" parent="."]
margin_left = 782.0
margin_top = 430.0
margin_right = 931.0
margin_bottom = 488.0
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
custom_fonts/font = ExtResource( 4 )
text = "BUY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Desc" type="RichTextLabel" parent="."]
margin_left = 86.0
margin_top = 298.0
margin_right = 282.0
margin_bottom = 378.0
custom_fonts/normal_font = ExtResource( 4 )
text = "Shoots a big laser
Price: 50 data cubes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Desc2" type="RichTextLabel" parent="."]
margin_left = 406.0
margin_top = 279.0
margin_right = 679.0
margin_bottom = 408.0
custom_fonts/normal_font = ExtResource( 4 )
text = "Shoots a high damage laser
Price: 100 data cubes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Desc3" type="RichTextLabel" parent="."]
margin_left = 783.0
margin_top = 280.0
margin_right = 979.0
margin_bottom = 391.0
custom_fonts/normal_font = ExtResource( 4 )
text = "Shoots a rocket
Price: 200 daa cubes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
margin_left = 892.0
margin_top = 26.0
margin_right = 1004.0
margin_bottom = 61.0
custom_fonts/font = ExtResource( 6 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Upgrades" type="Button" parent="."]
margin_left = 62.0
margin_top = 26.0
margin_right = 174.0
margin_bottom = 61.0
custom_fonts/font = ExtResource( 6 )
text = "Upgrades"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="Buy" to="." method="_on_Buy_pressed"]
[connection signal="pressed" from="Buy2" to="." method="_on_Buy2_pressed"]
[connection signal="pressed" from="Buy3" to="." method="_on_Buy3_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Upgrades" to="." method="_on_Upgrades_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
